packages/svelte/tests/compiler-errors/samples/css-global-block-combinator/main.svelte
<style>
	/* ok */
	.x > :global.x {
	}
	.x > :global p {
	}

	/* not ok */
	.x > :global {
	}
</style>
